@@ -2,6 +2,8 @@
 
     * jabberd/config.c: Generate warning: diff namespaces when include
     * jabberd/jabberd.c: use libpopt for commandline parsing
+    * xdb_file/xdbfiletool.c: start using libpopt for commandline parsing
+    * xdb_file/xdb_file.c: same
 
 2005-12-06  Matthias Wimmer  <m@tthias.net>
 
